src/index.css
@font-face {
  font-family: "CircularStd-Private";
  font-style: normal;
  font-weight: 400;
  src: url("/public/fonts/circular/CircularStd-Book.otf");
}

@font-face {
  font-family: "CircularStd-Private";
  font-style: normal;
  font-weight: 500;
  src: url("/public/fonts/circular/CircularStd-Medium.otf");
}

@font-face {
  font-family: "CircularStd-Private";
  font-style: normal;
  font-weight: 600;
  src: url("/public/fonts/circular/CircularStd-Bold.otf");
}

@font-face {
  font-family: "CircularStd-Private";
  font-style: normal;
  font-weight: 700;
  src: url("/public/fonts/circular/CircularStd-Black.otf");
}

* {
  -webkit-tap-highlight-color: transparent;
  -webkit-user-select: none; /* Safari */
  -ms-user-select: none; /* IE 10 and IE 11 */
  user-select: none; /* Standard syntax */
  scroll-behavior: smooth;
}

body {
  width: 100%;
  max-width: 2560px;
  margin: auto;
  overflow-x: hidden;
}

.fade-in {
  visibility: visible !important;
  opacity: 1 !important;
  transform: scale(1) !important;
  transition: all ease 0.5s;
}

[data-sal|="fade-up"] {
  opacity: 0 !important;
  ;
  transform: translateY(80px) !important;
  transition: opacity 0.9s ease, transform 0.9s ease !important;
  ;
}

[data-sal|="fade-up"].sal-animate {
  opacity: 1 !important;
  ;
  transform: translateY(0) !important;
  ;
}


/* Scrollbar */

::-webkit-scrollbar {
  width: 6px;
}

::-webkit-scrollbar-track {
  background-color: transparent;
}

::-webkit-scrollbar-thumb {
  background-color: rgb(162, 162, 167);
  border-radius: 100px;
}

  .react-slideshow-container+ul.indicators .each-slideshow-indicator:before{
    background: white !important;
  }

  .highlight-image{
    box-shadow: 10px 10px 20px #00000020;
    border-radius: 15px ;
  }

